--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,41 @@ a {
     color: black!important;
 }
 
+.text-cherry2{
+    color: var(--cherry)!important;
+}
+
+.text-violet{
+    color: var(--bg-main1)!important;
+}
+
+.text-yell{
+    color: var(--bg-main2)!important;
+}
+
+.text-purp{
+    color: var(--darkpurp)!important;
+}
+
+.text-blue{
+    color: royalblue!important;
+}
+
+/** Speech bubble */
+
+.speech-bubble {
+    background: #efefef;
+    border-radius: 4px!important;
+    font-size: 1.2rem!important;
+    line-height: 1.3!important;
+    margin: 0 auto 40px!important;
+    max-width: 400px!important;
+    padding: 15px!important;
+    position: relative!important;
+
+}
+
+
 
 
     /* SCROLLS  */
@@ -179,6 +214,25 @@ a {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+.display-1b {
+    font-family: var(--display)!important;
+    font-weight: bolder!important;
+    background: purple;
+    font-size:2em!important;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.display-1c {
+    font-family: var(--display)!important;
+    font-weight: bolder!important;
+    background: #DA4167;
+    font-size:3.5em!important;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 
 
 
